# idx

./: Cargo.toml  README.md
benches/: micro.rs
lib/: Cargo.toml
lib/src/: aggregate.rs  core.rs  document.rs  error.rs  index.rs  lib.rs  map.rs  query.rs  rank.rs  reader.rs  score.rs  token.rs  util.rs  writer.rs
lib/src/distance/: levenshtein.rs
lib/src/filter/: mod.rs
lib/src/normalizer/: lemmatize.rs  mod.rs  stopwords.rs
lib/src/tokenizer/: mod.rs  standard.rs  whitespace.rs
src/: cli.rs  descriptor.rs  document.rs  engine.rs  error.rs  hash.rs  index.rs  lib.rs  main.rs  map.rs  query.rs  read.rs  reader.rs  util.rs  writer.rs
src/normalizer/: case.rs  mod.rs  punctuation.rs  replace.rs  stopwords.rs
src/tokenizer/: html.rs  mod.rs  standard.rs  whitespace.rs
tests/: basic.rs
tests/config/: test.json
tests/data/: sample2.txt
tests/shared/: mod.rs
