[package]
name = "idx"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "idx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
crossbeam-channel = "0.5.13"
num-traits = "0.2.19"
tokio = { version = "1.40.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "test-util"] }
