[package]
name = "idx-repo"
publish = false
version = "0.0.1"
edition = "2021"

[workspace]
members = [ "cli",
  "lib"
]

[[bin]]
name = "idx-bin"
path = "src/main.rs"

[dependencies]
idx = { path = "lib" }
clap = { version = "4.5.16", features = ["derive"] }
crossbeam-channel = "0.5.13"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "test-util"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "micro"
harness = false
